--- a/src/App.css
+++ b/src/App.css
@@ -456,7 +456,7 @@ ul {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .cta__content {
@@ -492,7 +492,7 @@ ul {
         margin-right: 0;
         margin-bottom: 20px;
     }
-    
+
     .feature-item .face.face1 {
         transform: translateY(0);
     }
@@ -500,7 +500,7 @@ ul {
     .feature-item:hover .face.face1 {
         background-color: #ff0057;
     }
-    
+
     .feature-item .face.face2 {
         transform: translateY(0);
     }
@@ -3127,4 +3127,103 @@ input[type=range]::-ms-thumb {
     .footer__copyright ul li {
         margin-right: 30px;
     }
+}
+
+/*==============================
+	Plyr customization
+==============================*/
+.plyr {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+}
+
+.plyr__menu__container .plyr__control {
+    -webkit-transition: 0s ease;
+    -moz-transition: 0s ease;
+    transition: 0s ease;
+}
+
+.plyr__control--overlaid {
+    background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    padding: 20px;
+    -webkit-transition: 0.4s ease;
+    -moz-transition: 0.4s ease;
+    transition: 0.4s ease;
+}
+
+.plyr__control--overlaid:hover {
+    background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    -webkit-box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+    box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+}
+
+.plyr__control.plyr__control--overlaid {
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.plyr--video .plyr__control.plyr__tab-focus,
+.plyr--video .plyr__control:hover,
+.plyr--video .plyr__control[aria-expanded="true"] {
+    background: none;
+    background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+}
+
+.plyr--video .plyr__progress__buffer {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.plyr__progress__buffer {
+    -webkit-border-radius: 0;
+    border-radius: 0;
+}
+
+.plyr--full-ui input[type="range"] {
+    color: #ff55a5;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+}
+
+.plyr__tab-focus {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    outline: none;
+}
+
+.plyr__tooltip {
+    font-weight: 300;
+}
+
+.plyr__control.plyr__tab-focus {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.plyr__menu__container .plyr__control[role="menuitemradio"][aria-checked="true"]::before {
+    background: none;
+    background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+}
+
+.plyr__control {
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+}
+
+.plyr--video .plyr__control svg {
+    filter: none;
 }
