--- a/src/App.css
+++ b/src/App.css
@@ -3253,6 +3253,41 @@ input[type=range]::-ms-thumb {
 	Episode
 ==============================*/
 
+.episode-details-content__sub-header h6 {
+    margin-bottom: 20px;
+    color: #FFF;
+    font-size: 1.1rem;
+}
+
+.episode-details-content__header {
+    display: flex;
+    padding-bottom: 0;
+}
+
+.episode-details-content__header .card__rate {
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
+
+.description-html-container * {
+    color: #FFF;
+}
+
+.description-html-container a {
+    position: relative;
+    background-image: -webkit-linear-gradient(0deg, #ff55a5 0%, #ff5860 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #ff5860;
+    opacity: 1;
+}
+
+.episode-details__rating .section__btn{
+    margin-left: 0;
+    margin-bottom: 20px;
+    margin-top: 0;
+}
+
 .episode-row {
     display: flex;
     align-items: center;
