--- a/src/App.css
+++ b/src/App.css
@@ -978,7 +978,9 @@ input[type=range]::-ms-thumb {
 /*==============================
 	Home
 ==============================*/
-
+.ant-tabs-content  {
+    padding-bottom: 10px;
+}
 
 /*==============================
 	Home Header
@@ -3399,7 +3401,6 @@ input[type=range]::-ms-thumb {
     z-index: 9999;
     bottom: -5px !important;
     left: 0 !important;
-
 }
 
 .slick-dots li {
@@ -3413,4 +3414,50 @@ input[type=range]::-ms-thumb {
 
 .slick-dots li button:before {
     color: white !important;
+}
+
+.slick-next {
+    right: 0px;
+    top: -40px;
+}
+
+.slick-prev {
+    left: 95.5%;
+    top: -40px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .slick-next {
+        right: 0px;
+        top: -40px;
+    }
+    
+    .slick-prev {
+        left: 83%;
+        top: -40px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+    .slick-next {
+        right: 0px;
+        top: -40px;
+    }
+    
+    .slick-prev {
+        left: 92%;
+        top: -40px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    .slick-next {
+        right: 0px;
+        top: -40px;
+    }
+    
+    .slick-prev {
+        left: 95%;
+        top: -40px;
+    }
 }
