--- a/src/App.css
+++ b/src/App.css
@@ -465,16 +465,16 @@ ul {
     z-index: 3;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .landing-header {
-        height: 80vh;
-        background-image: url(https://wallpaperaccess.com/full/752715.jpg);
-        background-size: cover;
-        background-attachment: fixed;
-        position: relative;
-        background-position: center;
-    }
+.landing-header {
+    height: 80vh;
+    background-image: url(https://wallpaperaccess.com/full/752715.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+    background-position: center;
+}
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
     .landing-header__bg {
         display: none;
     }
@@ -561,6 +561,21 @@ ul {
     border-color: #ff55a5;
 }
 */
+
+.browse-engine form input {
+    border: 1px solid transparent;
+    transition: all 0.2s ease;
+}
+
+.browse-engine form input:focus {
+    background-color: #FFF;
+    color: #000;
+    border: 1px solid #ff55a5;
+}
+
+.browse-engine form input:focus::placeholder {
+    color: #000;
+}
 
 .browse-engine form .select {
     position: relative;
