--- a/src/App.css
+++ b/src/App.css
@@ -467,7 +467,7 @@ ul {
 
 .landing-header {
     height: 80vh;
-    background-image: url(https://wallpaperaccess.com/full/752715.jpg);
+    background-image: url(https://i.imgur.com/3b0ZQIM.jpg);
     background-size: cover;
     background-attachment: fixed;
     position: relative;
