--- a/src/App.css
+++ b/src/App.css
@@ -286,7 +286,7 @@ ul {
     top: 7px;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 98.8%;
     background-color: rgba(0, 0, 0, 0.8);
 }
 
@@ -389,7 +389,6 @@ ul {
 }
 
 #about {
-    background-color: #000;
 }
 
 #features {
@@ -400,7 +399,8 @@ ul {
 #about,
 #features,
 #faq,
-#pricing {
+#pricing,
+.landing-header {
     border-bottom: 5px solid #ff55a5;
 }
 
