--- a/src/App.css
+++ b/src/App.css
@@ -1046,7 +1046,7 @@ input[type=range]::-ms-thumb {
     height: 100%;
     z-index: 1;
     opacity: 0.07;
-    background-image: url("https://i.imgur.com/6pEt4hs.jpg");
+    background-image: url("https://i.imgur.com/kztOhRZ.jpg");
     background-size: cover;
     background-position: top;
     background-attachment: fixed;
@@ -1062,7 +1062,7 @@ input[type=range]::-ms-thumb {
     height: 100%;
     z-index: 1;
     opacity: 1;
-    background-image: url("https://i.imgur.com/e4ePNGG.jpg");
+    background-image: url("https://i.imgur.com/xETlr7c.jpg");
     background-size: cover;
     background-position: top;
     background-attachment: fixed;
@@ -2757,7 +2757,7 @@ input[type=range]::-ms-thumb {
     height: 400px;
     z-index: 1;
     opacity: 0.07;
-    background-image: url("https://i.imgur.com/6pEt4hs.jpg");
+    background-image: url("https://i.imgur.com/kztOhRZ.jpg");
     background-size: cover;
     background-position: top;
 }
