--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,20 @@
     padding-bottom: 50px;
 }
 
+.big-loader-container {
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+    background-color: #2b2b31;
+}
+
 .loader {
     border: 16px solid rgba(0, 0, 0, 0.3);
     border-top: 16px solid #ff55a5;
