--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,12 @@
     background-color: #b0006d;
 }
 
+.zalo__btn {
+    width: 100%;
+    margin-bottom: 10px;
+    background-color: #0180c7;
+}
+
 .stripe__btn {
     width: 100%;
     background-color: #1A1F71;
