--- a/src/App.css
+++ b/src/App.css
@@ -2919,6 +2919,17 @@ input[type=range]::-ms-thumb {
     color: #45668e;
 }
 
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+    .details .section__btn {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .landing-header, .home-header {
+        height: 100vh;
+    }
+}
+
 @media (min-width: 576px) {
     .details__title {
         font-size: 30px;
