--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,8 @@
     justify-content: center;
     z-index: 9999;
     background-color: #2b2b31;
+    width: 100%;
+    height: 100%;
 }
 
 .loader {
@@ -120,9 +122,11 @@
     position: absolute;
     transform: translate(-50%, -50%);
     bottom: 10%;
-    left: 48%;
-    width: 70px;
-    height: 70px;
+    left: 48.5%;
+    width: 60px;
+    height: 60px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
