--- a/src/App.css
+++ b/src/App.css
@@ -560,13 +560,8 @@ form input {
 }
 
 form input:focus {
-    background-color: #FFF;
-    color: #000;
+    transition: all 0.2s ease;
     border: 3px solid #ff55a5;
-}
-
-form input:focus::placeholder {
-    color: #000;
 }
 
 .browse-engine form .select {
