--- a/src/App.css
+++ b/src/App.css
@@ -1999,7 +1999,6 @@ input[type=range]::-ms-thumb {
     color: #ff5860;
     margin-right: 7px;
     opacity: 1;
-    pointer-events: none;
 }
 
 .card--details .card__meta a:after {
@@ -3617,6 +3616,7 @@ input[type=range]::-ms-thumb {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .continue-modal-footer button {
@@ -3630,6 +3630,27 @@ input[type=range]::-ms-thumb {
     padding-bottom: 12px;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .continue-modal {
+        width: 80%;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .continue-modal {
+        width: 90%;
+    }
+
+    .continue-modal-footer button {
+        flex: 100%;
+        max-width: 100%;
+    }
+
+    .continue-modal-footer button:first-child {
+        margin-bottom: 20px;
+    }
 }
 
 .empty-container {
