--- a/src/App.css
+++ b/src/App.css
@@ -700,10 +700,12 @@ input[type=range] {
     -webkit-appearance: none;
     margin: 10px 0;
     width: 100%;
+    background-color: #28282d;
 }
 
 input[type=range]:focus {
     outline: none;
+    border: none;
 }
 
 input[type=range]::-webkit-slider-runnable-track {
@@ -3761,6 +3763,30 @@ input[type=range]::-ms-thumb {
     color: #FFF;
 }
 
+.ant-modal-content {
+    border: 2px solid #ff55a5;
+    background-color: #2b2b31;
+}
+
+.ant-modal-header,
+.ant-modal-body {
+    background-color: #2b2b31;
+    border-bottom: 2px solid #ff55a5;
+    color: #FFF;
+}
+
+.ant-modal-header > * {
+    color: #FFF;
+}
+
+.ant-modal-close-x {
+    color: #FFF;
+}
+
+.ant-modal-footer {
+    border-top: 1px solid #ff55a5;
+}
+
 /*==============================
 	Form
 ==============================*/
@@ -3989,6 +4015,12 @@ input[type=range]::-ms-thumb {
 
 .comments__actions button:hover {
     color: #ff55a5;
+    transition: all 0.4s ease;
+}
+
+.comments__actions button:hover i {
+    color: #ff55a5;
+    transition: all 0.4s ease;
 }
 
 .comments__actions button:last-child {
@@ -4074,5 +4106,105 @@ input[type=range]::-ms-thumb {
 @media (min-width: 992px) {
     .comments {
         margin-bottom: 45px;
+    }
+}
+
+/*Modified Button*/
+.section__btn.red {
+    background-image: -moz-linear-gradient(90deg, #ED213A 0%, #93291E 100%);
+    background-image: -webkit-linear-gradient(90deg, #ED213A 0%, #93291E 100%);
+    background-image: -ms-linear-gradient(90deg, #ED213A 0%, #93291E 100%);
+    background-image: linear-gradient(90deg, #ED213A 0%, #93291E 100%);
+    -webkit-box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+    box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+}
+
+/*Profile*/
+.profile-page {
+    padding-top: 100px;
+}
+
+.profile-page .container {
+    max-width: 650px;
+}
+
+.profile__avatar {
+    border-radius: 50%;
+    position: relative;
+}
+
+.profile-avatar__image {
+    border-radius: 50%;
+    position: relative;
+}
+
+.profile-avatar__image:hover .profile__avatar--hover {
+    opacity: 1;
+}
+
+.profile__avatar--hover {
+    position: absolute;
+    border-radius: 50%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.profile__avatar--hover i {
+    font-size: 2rem;
+    color: #FFF;
+}
+
+.profile__avatar img {
+    border-radius: 50%;
+}
+
+.profile-info__item .form__input {
+    background-color: #2b2828;
+}
+
+.profile-info__item > * {
+    color: #FFF;
+}
+
+.profile__footer {
+    border-top: 2px solid #ff55a5;
+}
+
+.profile__footer .profile-footer__item .section__btn {
+    margin-left: auto;
+    margin-right: 0;
+}
+
+/*Avatar Modal*/
+.avatar-item {
+    margin-bottom: 20px;
+    height: 200px;
+    width: 100%;
+    border: 2px solid transparent;
+    cursor: pointer;
+}
+
+.avatar-item:hover {
+    border: 2px solid #ff55a5;
+    transition: all 0.3s ease;
+}
+
+.avatar-item img {
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .avatar-item {
+        height: 150px;
     }
 }
