--- a/src/App.css
+++ b/src/App.css
@@ -559,7 +559,8 @@ form input {
     transition: all 0.2s ease;
 }
 
-form input:focus {
+form input:focus,
+.form__input:focus {
     transition: all 0.2s ease;
     border: 3px solid #ff55a5;
 }
@@ -4121,7 +4122,10 @@ input[type=range]::-ms-thumb {
 
 /*Profile*/
 .profile-page {
-    padding-top: 100px;
+    min-height: 120vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile-page .container {
