--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,25 @@
     margin-right: auto;
 }
 
+.loading__btn .loader{
+    width: 20px;
+    height: 20px;
+    border-top: 16px solid #fff;
+    border-bottom: 16px solid #fff;
+}
+
+.like-button .loader-container {
+    padding: 0;
+}
+
+.like-button .loader{
+    border: 6px solid rgba(0, 0, 0, 0.3);
+    border-top: 6px solid #ff55a5;
+    border-bottom: 6px solid #ff55a5;
+    width: 5px;
+    height: 5px;
+}
+
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     .big-loader-container .loader {
         left: 45%;
@@ -174,6 +193,10 @@
     font-size: 1.2rem;
     width: 100%;
     text-align: center;
+}
+
+.video-player-container--trailer .plyr__video-wrapper {
+    height: 360px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
