--- a/src/App.css
+++ b/src/App.css
@@ -4025,6 +4025,7 @@ input[type=range]::-ms-thumb {
     top: 0;
     left: 0;
     width: 40px;
+    height: 40px;
     -webkit-border-radius: 50%;
     border-radius: 50%;
 }
@@ -4248,6 +4249,13 @@ input[type=range]::-ms-thumb {
 .profile-avatar__image {
     border-radius: 50%;
     position: relative;
+    height: 180px;
+    width: 180px;
+}
+
+.profile-avatar__image img {
+    height: 100%;
+    width: 100%;
 }
 
 .profile-avatar__image:hover .profile__avatar--hover {
@@ -4334,6 +4342,7 @@ input[type=range]::-ms-thumb {
 
     .profile-avatar__image {
         width: 200px;
+        height: 200px;
         margin-left: auto;
         margin-right: auto;
     }
